--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,12 @@ project(week14_lab2)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(week14_lab2 problem1.cpp
-        problem2.cpp)
+        problem2.cpp
+        problem3.cpp
+        problem4.cpp
+        problem5.cpp
+        problem6.cpp
+        problem7.cpp
+        problem8.cpp
+        problem9.cpp
+        problem10.cpp)
